updates are done

--- a/src/main/resources/webApp.properties
+++ b/src/main/resources/webApp.properties
@@ -3,4 +3,4 @@
 executionType=Local
 ################################   Browser Type   ##############################
 # Chrome , Firefox , Edge , Safari #
-browserType=Edge
+browserType=Chrome
