--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -1,4 +1,4 @@
 ################################    Environment URLs    ##############################
-baseUrlApi=https://automationexercise.com/api/
-baseUrlWeb=https://automationexercise.com
-REGISTER_LOGIN_URL=https://automationexercise.com/login
+
+baseUrlWeb=https://dev-partner.baab.com/
+
