--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
         <surefire.version>3.5.3</surefire.version>
         <aspectj.version>1.9.24</aspectj.version>
         <shutterbug.version>1.6</shutterbug.version>
-
         <allure.version>2.29.1</allure.version>
         <restassured.version>5.5.1</restassured.version>
         <jsonpath.version>2.9.0</jsonpath.version>
@@ -34,26 +33,22 @@
     <!-- ===================== BUILD ===================== -->
     <build>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
-
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>${suite.regression}</suiteXmlFile>
                     </suiteXmlFiles>
-
                     <failIfNoTests>false</failIfNoTests>
                     <useFile>false</useFile>
 
                     <argLine>
-                        -javaagent:${user.home}/.m2/repository/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
+                        -javaagent:C:/Projects/M2Repo/aspectjweaver-${aspectj.version}.jar
                     </argLine>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
@@ -80,7 +75,7 @@
             <version>${selenium.version}</version>
         </dependency>
 
-        <!-- TestNG (ONE TIME ONLY) -->
+        <!-- TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -92,7 +87,6 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
         </dependency>
-
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-java-commons</artifactId>
@@ -118,7 +112,6 @@
             <artifactId>json-path</artifactId>
             <version>${jsonpath.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
@@ -152,12 +145,22 @@
             <artifactId>log4j-slf4j2-impl</artifactId>
             <version>2.24.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.24.3</version>
+        </dependency>
 
         <!-- Screen Recording -->
         <dependency>
             <groupId>ws.schild</groupId>
             <artifactId>jave-all-deps</artifactId>
             <version>3.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.stephenc.monte</groupId>
+            <artifactId>monte-screen-recorder</artifactId>
+            <version>0.7.7.0</version>
         </dependency>
 
         <!-- Mockito -->
@@ -175,35 +178,12 @@
             <version>${shutterbug.version}</version>
         </dependency>
 
+        <!-- Allure Environment Writer -->
         <dependency>
             <groupId>com.github.automatedowl</groupId>
             <artifactId>allure-environment-writer</artifactId>
             <version>1.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.24.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>ws.schild</groupId>
-            <artifactId>jave-all-deps</artifactId>
-            <version>3.5.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.stephenc.monte</groupId>
-            <artifactId>monte-screen-recorder</artifactId>
-            <version>0.7.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.19.0</version>
-        </dependency>
-
-
 
     </dependencies>
 
