SignIn\SignUp TCs created

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -1,4 +1,4 @@
 ################################    Environment URLs    ##############################
 
 baseUrlWeb=https://dev-partner.baab.com/
-
+tempEmail=https://temp-mail.org/en/
